--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Next.js + Tailwind CSS + Radix UI
 
-The robotics assessment web application using **Next.js**, **Tailwind CSS**, and **Radix UI**.
+The SIMS robotics assessment web application using **Next.js**, **Tailwind CSS**, and **Radix UI**.
 
  Getting Started
 
